--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,6 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   <link rel="stylesheet" href="./output.css">  
   <title>Frontend Mentor | Social links profile</title>
-
-  
 </head>
 <body>
   <section class="p-7 rounded-lg shadow-lg">
@@ -53,7 +51,7 @@
   
   <div class="attribution absolute bottom-0 left-[50%] translate-x-[-50%]">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://github.com/Ehsan-eslami">EhsanEslami</a>.
   </div>
 </body>
 </html>
