--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 <body>
   <section class="p-7 rounded-lg shadow-lg">
     <div class="mb-5">
-      <img class=" mx-auto rounded-full w-[70px]" src="../assets/images/avatar-jessica.jpeg" alt="">
+      <img class=" mx-auto rounded-full w-[70px]" src="./images/avatar-jessica.jpeg" alt="">
     </div>
     <h1 class="text-center text-xl font-semibold text-white mb-1">
       Jessica Randall
