--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <title>Frontend Mentor | Social links profile</title>
 </head>
 <body>
-  <section class="p-7 rounded-lg shadow-lg">
+  <section class="p-7 rounded-lg">
     <div class="mb-5">
       <img class=" mx-auto rounded-full w-[70px]" src="./images/avatar-jessica.jpeg" alt="">
     </div>
